--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <style>
-      header
-      {
-      background-color:red
-      height:70px
-      width:100%
-      }
-      footer
-      {
-      background-color;green
-      height:60px
-      width:100%
-      text-align:center
-      }
-    </style>
+    <meta charset="utf-8">
+    <title>AirBnB Clone</title>
   </head>
-  <body>
-    <header>
+  <body style="margin: 0; padding: 0;">
+    <header style="background-color: #FF0000; height: 70px; width: 100%;">
     </header>
-    <footer>
+    <footer style="background-color: #00FF00; height: 60px; width: 100%;
+		   text-align: center; justify-content: center;
+		   align-items: center; bottom: 0; position: absolute;">
       Holberton School
     </footer>
   </body>
