--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -10,7 +10,7 @@
     <footer style="background-color: #00FF00; height: 60px; width: 100%;
 		   text-align: center; justify-content: center;
 		   align-items: center; bottom: 0; position: absolute;">
-      Holberton School
+      <p>Holberton School</p>
     </footer>
   </body>
 </html>
